# Aether

./: .gitignore  Cargo.toml  LICENSE  Readme.md
aether/src/: main.rs
file_bard/: Cargo.toml  Readme.md
file_bard/src/: main.rs
file_bard/test_environment/: on_dogs.athr
typed_voice/: Cargo.toml
typed_voice/src/: main.rs
video_bard/: Cargo.toml  Readme.md
video_bard/shaders/: canny.wgsl  shader.wgsl
video_bard/src/: dot_detector.rs  hough_transform.rs  lib.rs  main.rs  types.rs  walker.rs
voice/: Cargo.toml
voice/src/: lib.rs
