[package]
name = "video_bard"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
wgpu = "25.0"
winit = { version = "0.30", features = ["android-native-activity"] }
pollster = "*"
cargo-wgsl = "*"